# rust-projects

advent_of_code/aoc_d1/: Cargo.toml
advent_of_code/aoc_d1/src/: main.py  main.rs
advent_of_code/aoc_d2/: Cargo.toml
advent_of_code/aoc_d2/src/: d2input.txt  main.rs
blockchain/: Cargo.toml
blockchain/src/: blockchain.rs  main.rs
browser_engine/: Cargo.toml
chat/client/: Cargo.toml
chat/client/src/: main.rs
chat/server/: Cargo.toml
chat/server/src/: main.rs
file_renamer/: Cargo.toml
file_renamer/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
play_ground/: Cargo.toml
play_ground/src/: main.rs
port-sniffer-cli/: Cargo.toml
port-sniffer-cli/src/: main.rs
tagcsv/: Cargo.toml
tagcsv/src/: main.rs  tag_matrix.csv
tagcsv/src/posts/: rust-devops.toml
web_crawler/: Cargo.toml
web_crawler/src/: crawl.rs  main.rs
