[package]
name = "tagcsv"
version = "0.1.0"
authors = ["vi_mi <fenil.jain2018@vitstudent.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = "1.0.115"
serde_derive = "1.0.115"
toml = "0.5.6"
